# opengl_d20

./: .gitmodules  CMakeLists.txt  README.md  d20.c  icosahedron.c  icosahedron.h
glad/: CMakeLists.txt
include/: animation.h  icosahedron.h  scene.h  shader.h  status.h  text.h
resources/shaders/: fragment_shader.glsl  text_fragment_shader.glsl  text_vertex_shader.glsl  vertex_shader.glsl
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: animation.c  icosahedron.c  scene.c  shader.c  text.c
